# kitchen-table-magic

./: .gitignore  Makefile  by_binder.html  by_pool.html  pyproject.toml  tag_queries.json
ktm_season_2/0_5/: ManaBox_Collection.csv  akr-trophies.html  by_binder.html  by_pool.html  card_test.html  grid.html  magic-sets-archetypes.csv  pool_0 (Jack).txt  pool_0.dec  pool_0_disambiguate.html  pool_1.dec  pool_1_disambiguate.html  pool_2.dec  pool_2_disambiguate.html  pool_3.dec  pool_3_disambiguate.html  pool_4.dec  pool_4_disambiguate.html  pools.html  scryfall_data.csv  test.html
ktm_season_2/6_9/: ManaBox_Collection.csv  pool_5.dec  pool_5_disambiguate.html  pool_6.dec  pool_6_disambiguate.html  pool_7.dec  pool_7_disambiguate.html  pool_8.dec  pool_8_disambiguate.html  pool_9.dec  pool_9_disambiguate.html  scryfall_data.csv
mtg_script/: build_cube.py  grid_test.py  lib.py  merge_into_binder.py  predetermined_draft.py  query_cards.py  sample_pools.py  scrape-deck.py  scryfall_data.py  sort_sheets.py  tag_database.py  web.py
